--- a/res/index.html
+++ b/res/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <h1>Bitcoin Proof of Reserves</h1>
-You can verify  <a href="https://github.com/bitcoin/bips/blob/master/bip-0127.mediawiki">BIP-0127</a> Proof of Reserves BSBTs.<br/>
+You can verify  <a href="https://github.com/bitcoin/bips/blob/master/bip-0127.mediawiki">BIP-0127</a> Proof of Reserves PSBTs.<br/>
 Learn more at <a href="https://crates.io/crates/bdk-reserves">bdk-reserves</a> or <a href="https://ulrichard.ch/blog/?p=2566">Richis blog</a><br/>
 
 <h3>Proof details</h3>
@@ -31,14 +31,14 @@ Learn more at <a href="https://crates.io/crates/bdk-reserves">bdk-reserves</a> o
     return false;
   '>
   <label for="addresses">Addresses (comma separated):</label><br/>
-  <textarea id="addresses" name="addresses" rows="2" cols="90"></textarea><br/>
+  <textarea id="addresses" name="addresses" rows="2"></textarea><br/>
   <label for="message">Message:</label><br>
-  <textarea id="message" name="message" rows="2" cols="90"></textarea><br/>
+  <textarea id="message" name="message" rows="2"></textarea><br/>
   <label for="proof">Proof PSBT base64:</label><br>
-  <textarea id="proof" name="proof" rows="26" cols="90"></textarea><br/>
+  <textarea id="proof" name="proof" rows="26"></textarea><br/>
   <input type="submit" value="Submit"><br>
   <label for="res">result:</label><br>
-  <textarea id="res" name="res" rows="3" cols="90"></textarea><br/>
+  <textarea id="res" name="res" rows="3"></textarea><br/>
 </form>
 </body>
 </html>
